# BadWAM

./: README.md  pyproject.toml
Homepage/: README.md  index.html  style.css
checkpoints/fastwam_release/: README.md
configs/: sim_libero.yaml  train.yaml
configs/task/: libero_joint_2cam224_1e-4.yaml
docs/: index.html  script.js  style.css
experiments/attackwam/: __init__.py  analyze_ablation_suite.py  analyze_matched_stealth.py  render_representatives_to_gif.py  run_attackwam_ablation_suite.sh  run_libero_attackwam_study.sh  run_matched_strength_stealth.sh  summarize_attackwam.py  train_universal_patch.py
experiments/libero/: eval_libero_single.py  run_libero_manager.py  run_libero_parallel_test.sh  run_num_inference_steps_sweep.sh
scripts/: preprocess_action_dit_backbone.py
src/attackwam/: __init__.py  attacks.py
src/fastwam/: trainer.py
src/fastwam/datasets/lerobot/lerobot/: lerobot_dataset.py
