[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badwam"
version = "0.1.0"
description = "BadWAM: world-action desynchronization attacks against world-action models"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.0",
  "av>=12.0",
  "datasets>=3.0",
  "einops>=0.8",
  "gitpython>=3.1",
  "huggingface-hub>=0.29",
  "hydra-core>=1.3",
  "imageio>=2.30",
  "imageio-ffmpeg>=0.5",
  "jsonlines>=4.0",
  "numpy>=1.24,<2.0",
  "omegaconf>=2.3",
  "packaging>=23.0",
  "pandas>=2.0",
  "pillow>=10.0",
  "pyarrow>=15.0",
  "regex>=2024.0",
  "rich>=13.0",
  "safetensors>=0.4",
  "termcolor>=2.3",
  "torch>=2.4",
  "torchvision>=0.19",
  "tqdm>=4.66",
  "transformers>=4.49",
  "typing-extensions>=4.8",
  "wandb>=0.17",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastwam*", "attackwam*"]
